--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -45,7 +45,7 @@ We define the sequence of work-reports which we may be required to audit as $\ma
 
 We define our initial audit tranche in terms of a verifiable random quantity $s_0$ created specifically for it:
 \begin{align}
-  s_0 &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}}{[]} \\
+  s_0 &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout(\H_\¬vrfsig)}{[]} \\
   \mathsf{X}_U &= \token{\$jam\_audit}
 \end{align}
 
