Nit: "two functions" -> "three functions"

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -246,7 +246,7 @@ The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ whi
   \end{aligned}
 \end{equation}
 
-We may then define $\wr¬avspec$ as the data availability specification of the package using these two functions together with the yet to be defined \emph{Availability Specifier} function $\newavailabilityspecifier$ (see section \ref{sec:availabiltyspecifier}):
+We may then define $\wr¬avspec$ as the data availability specification of the package using these three functions together with the yet to be defined \emph{Availability Specifier} function $\newavailabilityspecifier$ (see section \ref{sec:availabiltyspecifier}):
 \begin{equation}
   \wr¬avspec = \newavailabilityspecifier(
     \blake(\wpX),
